# tasten

./: .gitignore
lecciones/: Cargo.toml
lecciones/src/: especie.rs  karen.rs  llamada_karen.rs  main.rs  michi.rs
lecciones/src/implement_traits/: mod.rs  news_article.rs  social_post.rs  summary.rs
lecciones/src/metodos_o/: burbuja.rs  mod.rs
lecciones/src/paquetelibros/: biblioteca.rs  librero.txt  libro.rs  main_libros.rs  mod.rs
lecciones/src/vectores/: dinamicos.rs  mod.rs
tekla-back/: Cargo.toml  ws_test.sh
tekla-back/.github/: copilot-instructions.md
tekla-back/.github/agents/: backend-agent.md
tekla-back/.github/instructions/: constitucion.md  project.instructions.md
tekla-back/db/: README.md  tastendb.sql
tekla-back/src/: .env  carrera.rs  errors.rs  main.rs  state.rs
tekla-back/src/auth/: jwt.rs  jwt_service.rs  middleware.rs  mod.rs  routes.rs
tekla-back/src/middleware/: auth.rs  protected.rs
tekla-back/src/models/: carrera.rs  estadisticas.rs  mod.rs  users.rs
tekla-back/src/routes/: auth.rs  carrera.rs  estadisticas.rs  mod.rs  protected.rs  ws.rs
tekla-back/src/services/: carrera.rs  estadisticas.rs  mod.rs  state.rs
tekla-front/: README.md  SKILL.md  angular.json  package-lock.json  package.json
tekla-front/.github/agents/: revisor-sintactico.agent.md
tekla-front/.github/prompts/: generar-componente.prompt.md
tekla-front/.github/specify/memory/: constitution.md
tekla-front/src/: index.html  styles.less
tekla-front/src/app/: app.config.ts  app.html  app.routes.ts  app.spec.ts  app.ts
(+29 files in other folders)
