[package]
name = "tekla-back"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
actix-web = "4.12.1"
axum = "0.8.8"
chrono = "0.4.43"
dotenv = "0.15.0"
jsonwebtoken = "10.3.0"
rand = "0.9.2"
serde = "1.0.228"
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = "1.49.0"
uuid = { version = "1", features = ["v4", "serde"] } 
