[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Framework principal
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

#rand
rand  ="0.9.2"

# JWT
jsonwebtoken = "9"

# Serialización
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Manejo de errores
thiserror = "1"

# Variables de entorno
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Tiempo (para expiración del token)
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0.102"
